--- a/MonitoringTool/static/style.css
+++ b/MonitoringTool/static/style.css
@@ -35,7 +35,7 @@ table {
 th, td {
     padding: 10px;
     border: 1px solid #ccc;
-    text-align: left;
+    text-align: center;
 }
 
 th {
@@ -46,12 +46,42 @@ tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-.results-container {
+#form-container{
+    justify-content:space-between;
+}
+
+.ok {
+    background-color: green!important;
+    color: white;
+    border-radius: 5px;
+}
+
+.ko {
+    background-color: red!important; 
+    color: white;
+    border-radius: 5px;
+}
+
+input, select {
+    width: 100%;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#results-container {
     margin: 50px auto;
     padding: 20px;
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+#history-container {
+    max-width: 300px;
+    margin: 10px auto;
+    text-align: center;
 }
 
 .overflow-list {
